--- a/index.html
+++ b/index.html
@@ -4,10 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.9.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <link href="theme.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-  
+    <main>
+      <section>
+        
+        <div class="left">
+          <div class="top">
+            <label for="image-input" class="btn">
+              Choose Image
+              <input type="file" id="image-input" accept="image/*" hidden>
+            </label>
+            <button class="btn" id="reset-btn">Reset</button>
+            <button class="btn" id="download-btn">Download</button>
+          </div>
+
+          <div class="bottom">
+            <div class="placeholder">
+              <i class="ri-image-line"></i>
+              <p>No Image Choosen</p>
+            </div>
+    </div>
+        </div>
+
+        <div class="right">
+          <h2>Filters</h2>
+          <div class="filters">
+            <div class="filter">
+              <p>Brightness</p>
+              <input 
+                type="range" 
+                min="0" 
+                max="200" 
+                name="brightness" 
+                value="100"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
