--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
               <i class="ri-image-line"></i>
               <p>No Image Choosen</p>
             </div>
-    </div>
+            <canvas id="image-canvas"></canvas>
+          </div>
         </div>
 
         <div class="right">
